Skip to content
GitLab
Projects Groups Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Register
  • Sign in
  • NetworkManager NetworkManager
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 170
    • Issues 170
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 18
    • Merge requests 18
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Packages and registries
    • Packages and registries
    • Container Registry
  • Monitor
    • Monitor
    • Incidents
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar

Due to an influx of spam, we have had to impose restrictions on new accounts. Please see this wiki page for instructions on how to get full permissions. Sorry for the inconvenience.

  • NetworkManagerNetworkManager
  • NetworkManagerNetworkManager
  • Issues
  • #48
Closed
Open
Issue created Sep 25, 2018 by Vladimir Valchovski@secret2k

WiFi Hotspot (AP mode) does not apply Hidden setting

Issue Description

Using NetworkManager to handle WiFi hotspot creation - every parameter configured on the connection works perfectly except the hidden parameter. No matter if the hidden is set to (true, yes, 1) or (false, no, 0) the result is always the same: SSID is been broadcast-ed.

The property inside of the NetowkrManager is being set successfully based on the configuration setting:

802-11-wireless.hidden:                 yes (when [true], [yes], or [1])
802-11-wireless.hidden:                 no (otherwise)

Connection configuration

/etc/NetworkManager/system-connections/wlan0

[connection]
id=wlan0
uuid=7f9019a0-949c-3ae7-81ff-8ee1fffc8795
type=wifi
interface-name=wlan0
permissions=
timestamp=1537544044

[wifi]
hidden=true
mac-address-blacklist=
mode=ap
seen-bssids=B0:F1:EC:9C:04:B6;
ssid=TRTTT

[wifi-security]
group=ccmp;
key-mgmt=wpa-psk
pairwise=ccmp;
proto=rsn;
psk=1234567890

[ipv4]
address1=192.168.55.1/24
dns-search=
method=shared

[ipv6]
addr-gen-mode=eui64
dns-search=
method=auto

Expected Behaviour

When hidden option is set, the SSID show not be broadcast-ed

System

  • OS: Ubuntu Server 18.04.1 LTS (Basic server installation)
  • Kernel: 4.15.0-30-generic
  • Arch: AMD64
  • WiFi Vendor: Broadcom Corp.
  • WiFi Driver: brcmfmac v0.7.46.57
  • WiFi FW Version: es6.c5.n4.a3

Comments

I'm not sure if I'm doing something wrong (there are not many information on AP mode around the net). This could also be a driver issue, but configuring the same test with hostapd package the drivers work as expected. And as there are 3 other network interfaces on this device I would really want to setup everything network related with NM.

Best Regards
Vladimir.

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
Time tracking