wifi: support hidden ssid in AP mode

https://gitlab.freedesktop.org/NetworkManager/NetworkManager/issues/48
(cherry picked from commit 5d97e76c7d1d00e6e42216edc9ce2bd1153f02fa)
(cherry picked from commit f235d57a3a1343081fb72ad0a426b33b4774c0af)